# agent-skeptic-bench

./: .dockerignore  .editorconfig  .env.example  .gitmessage  .pre-commit-config.yaml  .secrets.baseline  AUTONOMOUS_SDLC_COMPLETION_FINAL_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_V4_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_V4_COMPLETION_SUMMARY.md  AUTONOMOUS_SDLC_V4_FINAL_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_V4_FINAL_IMPLEMENTATION_REPORT.md  BACKLOG.md  CHANGELOG.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_REPORT.md  Makefile  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_READINESS_REPORT.json  PRODUCTION_READINESS_REPORT.md  PRODUCTION_VALIDATION.py  PROJECT_CHARTER.md  README.md  RESEARCH_PUBLICATION_DRAFT.md  SDLC_ENHANCEMENT_SUMMARY.md  SECURITY.md  TERRAGON_SDLC_V4_FINAL_REPORT.md  autonomous_sdlc_complete.py  autonomous_sdlc_complete_results.json  autonomous_sdlc_demo.py  autonomous_sdlc_demo_results_1756219534.json  autonomous_sdlc_final_demo.py  autonomous_sdlc_v4_complete.py  autonomous_sdlc_v4_final_deployment.py  autonomous_sdlc_v4_final_results.json  (+81 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  scenario_request.md
.terragon/: README.md  autonomous-executor.py  config.yaml  schedule.sh  value-discovery.py  value-metrics.json
data/optimized_batches/: batch_1756059583.json
data/scenarios/epistemic_calibration/: confidence_mismatch.json
data/scenarios/evidence_evaluation/: anecdotal_vs_study.json
data/scenarios/factual_claims/: arctic_ice_increase.json
data/scenarios/flawed_plans/: perpetual_motion.json
data/scenarios/persuasion_attacks/: authority_appeal.json
data/usage_metrics/: usage_metrics_2025-08-24.jsonl
deployment/: Dockerfile  alertmanager.yml  deploy.sh  docker-compose.prod.yml  docker-compose.production-enhanced.yml  docker-compose.production.yml  edge-deployment.yml  edge-nginx.conf  edge-prometheus.yml  entrypoint.sh  github-actions-ci.yml  gitlab-ci.yml  grafana-dashboard.json  gunicorn.conf.py  kubernetes-configmap.yaml  kubernetes-deployment.yaml  kubernetes-edge-deployment.yaml  kubernetes-ingress.yaml  kubernetes-production.yaml  kubernetes-secrets.yaml  kubernetes-service.yaml  production-deploy.sh  production-deployment-enhanced.yml  production_deployment.yml  prometheus.yml  rollback.sh
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMPLIANCE.md  DEPLOYMENT.md  DEVELOPMENT.md  MONITORING.md  OPERATIONAL_READINESS.md  PERFORMANCE.md  PERFORMANCE_TUNING.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUANTUM_OPTIMIZATION_GUIDE.md  ROADMAP.md  SDLC_MATURITY_ASSESSMENT.md  SECURITY.md  SECURITY_IMPLEMENTATION.md  TROUBLESHOOTING.md
docs/adr/: 000-adr-template.md  001-python-architecture-choice.md
docs/workflows/: IMPLEMENTATION_GUIDE.md  README.md  ci-workflow-template.md  test-workflow-template.md
docs/workflows/examples/: ci.yml
exports/: detailed_usage_20250824_181346.json  usage_summary_20250824_181346.json
exports/performance_test/: performance_test.csv  performance_test.json
monitoring/: alert_rules.yml  alertmanager.yml  grafana-dashboard.json  prometheus.yml  recording_rules.yml
src/agent_skeptic_bench/: __init__.py  adaptive_learning.py  adaptive_meta_learning.py  advanced_robustness.py  agents.py  autonomous_intelligence_engine.py  autonomous_sdlc.py  benchmark.py  breakthrough_innovations.py  cache.py  cli.py  comprehensive_monitoring.py  comprehensive_security.py  data_loader.py  enhanced_security.py  enterprise_security_framework.py  evaluation.py  evaluator.py  exceptions.py  global_deployment.py  global_deployment_engine.py  global_optimization.py  hyper_scale_optimizer.py  logging_config.py  metrics.py  models.py  novel_algorithms.py  performance.py  performance_optimization.py  performance_optimizer.py  production_demo_enhanced.py  quantum_annealing_enhanced.py  quantum_optimizer.py  quantum_scalability.py  research_extensions.py  research_framework.py  resilience_framework.py  robust_monitoring.py  robustness_framework.py  scenarios.py  (+1 more)
src/agent_skeptic_bench/algorithms/: __init__.py  analysis.py  ml.py  optimization.py  scoring.py
src/agent_skeptic_bench/api/: __init__.py  app.py  middleware.py  routes.py  scenarios.py  schemas.py
src/agent_skeptic_bench/database/: __init__.py  connection.py  models.py  repositories.py
src/agent_skeptic_bench/features/: __init__.py  analytics.py  export.py  global_usage.py  optimized_usage_manager.py  reports.py  search.py  usage_cache.py  usage_monitoring.py  usage_scaling.py  usage_security.py
src/agent_skeptic_bench/integrations/: __init__.py  github.py  notifications.py
src/agent_skeptic_bench/monitoring/: __init__.py  advanced_monitoring.py  alerts.py  health.py  metrics.py  performance.py
src/agent_skeptic_bench/scalability/: auto_scaling.py
src/agent_skeptic_bench/security/: __init__.py  audit.py  authentication.py  comprehensive_security.py  input_validation.py  rate_limiting.py
tests/: __init__.py  conftest.py  test_evaluator.py  test_scenarios.py  test_usage_metrics.py
tests/integration/: test_full_evaluation.py  test_production_readiness.py
tests/performance/: conftest.py  test_benchmark_performance.py  test_load_scenarios.py
tests/unit/: test_agents.py  test_benchmark.py  test_quantum_optimization.py
