[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-skeptic-bench"
version = "0.1.0"
description = "Benchmark for AI epistemic humility: tests whether agents know what they don't know."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Daniel Schmidt"},
]
keywords = ["ai", "benchmark", "epistemic", "calibration", "uncertainty", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/danieleschmidt/agent-skeptic-bench"
Repository = "https://github.com/danieleschmidt/agent-skeptic-bench"
Issues = "https://github.com/danieleschmidt/agent-skeptic-bench/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_skeptic_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
branch = true
